# jikji

./: .gitignore  AGENTS.md  PROVENANCE.md  README.md  authz.mjs  core.mjs  dashboard.mjs  embed.mjs  gateway.mjs  gpu.mjs  package-lock.json  package.json  plans.mjs  protocol.mjs  ratelimit.mjs  rerank.mjs  search.mjs  server.mjs  store.mjs  telemetry.mjs  worker.mjs
.github/workflows/: ci.yml
clients/: README.md
clients/adapters/: README.md  langgraph_jikji_store.py
clients/claude-code/: .mcp.json  install.sh  settings.hooks.json
clients/claude-code/hooks/: session-start.sh  stop.sh
clients/cursor/: jikji.mdc
docs/public/: BENCHMARKS.md  BETA.md  DOGFOODING.md  EVAL.md  SERVING.md  WHY-JIKJI.md
embed-service/: README.md  pyproject.toml  rerank_server.py  server.py
eval/: ab.mjs  dataset-crosslingual.json  dataset-en.json  dataset-hard.json  dataset-semantic.json  dataset-v0.json  harness.mjs  run.mjs
test/: core.test.mjs  hardening.test.mjs  increment10-internal.test.mjs  increment11-ratelimit.test.mjs  increment2.test.mjs  increment3.test.mjs  increment3b.test.mjs  increment4.test.mjs  increment5.test.mjs  increment5b.test.mjs  increment6.test.mjs  increment7.test.mjs  increment8-multimodal.test.mjs  increment9-authz.test.mjs  mcp.test.mjs
